Rat-Grammer/RatParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/lord_faceless/RiderProjects/Rat/Rat-Grammer/Antlr/Rat.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class RatParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		COMPAREOPERATOR=1, IF=2, ELSE=3, WHERE=4, IN=5, IS=6, MUT=7, FN=8, PARALLEL=9, 
		ARROW=10, ANY=11, OPTIONAL=12, NIL=13, LET=14, LETG=15, TYPEKW=16, EXT=17, 
		ENDEXT=18, AND=19, ANDEQUALS=20, OR=21, NOT=22, OREQUALS=23, TWODOTS=24, 
		COLON=25, SEMICOLON=26, EXPRSEPARATOR=27, ID=28, COMMA=29, XOREQUALS=30, 
		XOR=31, ADDEQUALS=32, PLUSPLUS=33, ADD=34, MINUSEQUALS=35, MINUS=36, PRODUCTEQUALS=37, 
		PRODUCT=38, DIVIDEEQUALS=39, DIVIDE=40, EQUALS=41, INEQUALS=42, GREATER=43, 
		LESS=44, GREATEREQUAL=45, LESSEQUAL=46, SET=47, LPARENTHESIS=48, RPARENTHESIS=49, 
		LBRACE=50, RBRACE=51, MEMDERCALLOPERATOR=52, TRUE=53, FALSE=54, DIGIT=55, 
		NULLCHAR=56, CHAR1=57, CHAR2=58, CHAR3=59, CHAR4=60, CHAR5=61, CHAR6=62, 
		CHAR7=63, CHAR8=64, CHAR9=65, CHAR10=66, CHAR11=67, CHAR12=68, CHAR13=69, 
		CHAR14=70, CHAR15=71, CHAR16=72, CHAR17=73, CHAR18=74, CHAR19=75, CHAR20=76, 
		CHAR21=77, CHAR22=78, CHAR23=79, CHAR24=80, CHAR25=81, CHAR26=82, CHAR27=83, 
		CHAR28=84, CHAR29=85, CHAR30=86, CHAR31=87, ESCAPEDQUOTE=88, ESCAPEDDOUBLEQUOTE=89, 
		QUOTE=90, DOUBLEQUOTE=91, QUOTEDSTRING=92, DOUBLEQUOTEDSTRING=93, WHITESPACE=94, 
		NEWLINE=95, LINEFEED=96, INDENT=97, DEDENT=98;
	public const int
		RULE_code = 0, RULE_statementblock = 1, RULE_statement = 2, RULE_expressions = 3, 
		RULE_expression = 4, RULE_leftoperator = 5, RULE_zerooperator = 6, RULE_firstoperator = 7, 
		RULE_secondoperator = 8, RULE_thirdoperator = 9, RULE_funcdef = 10, RULE_funcargs = 11, 
		RULE_funcarg = 12, RULE_funccall = 13, RULE_exprargs = 14, RULE_ifexpr = 15, 
		RULE_ifstmt = 16, RULE_bool = 17, RULE_range = 18, RULE_string = 19, RULE_number = 20;
	public static readonly string[] ruleNames = {
		"code", "statementblock", "statement", "expressions", "expression", "leftoperator", 
		"zerooperator", "firstoperator", "secondoperator", "thirdoperator", "funcdef", 
		"funcargs", "funcarg", "funccall", "exprargs", "ifexpr", "ifstmt", "bool", 
		"range", "string", "number"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'if'", "'else'", "'where'", "'in'", "'is'", "'mut'", "'fn'", 
		"'parallel'", "'=>'", "'Any'", "'Optional'", "'Nil'", "'let'", "'LET'", 
		"'type'", "'ext'", "'endext'", "'and'", "'&='", "'or'", "'not'", "'|='", 
		"'..'", "':'", "';'", null, null, "','", "'^='", null, "'+='", "'++'", 
		"'+'", "'-='", "'-'", "'*='", "'*'", "'/='", "'/'", "'=='", "'!='", "'>'", 
		"'<'", "'>='", "'<='", "'='", "'('", "')'", "'{'", "'}'", "'::'", "'true'", 
		"'false'", null, "'\\0'", "'\\1'", "'\\2'", "'\\3'", "'\\4'", "'\\5'", 
		"'\\6'", "'\\7'", "'\\8'", "'\\9'", "'\\10'", "'\\11'", "'\\12'", "'\\13'", 
		"'\\14'", "'\\15'", "'\\16'", "'\\17'", "'\\18'", "'\\19'", "'\\20'", 
		"'\\21'", "'\\22'", "'\\23'", "'\\24'", "'\\25'", "'\\26'", "'\\27'", 
		"'\\28'", "'\\29'", "'\\30'", "'\\31'", "'\\''", "'\\\"'", "'''", "'\"'", 
		null, null, "' '", null, "'\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "COMPAREOPERATOR", "IF", "ELSE", "WHERE", "IN", "IS", "MUT", "FN", 
		"PARALLEL", "ARROW", "ANY", "OPTIONAL", "NIL", "LET", "LETG", "TYPEKW", 
		"EXT", "ENDEXT", "AND", "ANDEQUALS", "OR", "NOT", "OREQUALS", "TWODOTS", 
		"COLON", "SEMICOLON", "EXPRSEPARATOR", "ID", "COMMA", "XOREQUALS", "XOR", 
		"ADDEQUALS", "PLUSPLUS", "ADD", "MINUSEQUALS", "MINUS", "PRODUCTEQUALS", 
		"PRODUCT", "DIVIDEEQUALS", "DIVIDE", "EQUALS", "INEQUALS", "GREATER", 
		"LESS", "GREATEREQUAL", "LESSEQUAL", "SET", "LPARENTHESIS", "RPARENTHESIS", 
		"LBRACE", "RBRACE", "MEMDERCALLOPERATOR", "TRUE", "FALSE", "DIGIT", "NULLCHAR", 
		"CHAR1", "CHAR2", "CHAR3", "CHAR4", "CHAR5", "CHAR6", "CHAR7", "CHAR8", 
		"CHAR9", "CHAR10", "CHAR11", "CHAR12", "CHAR13", "CHAR14", "CHAR15", "CHAR16", 
		"CHAR17", "CHAR18", "CHAR19", "CHAR20", "CHAR21", "CHAR22", "CHAR23", 
		"CHAR24", "CHAR25", "CHAR26", "CHAR27", "CHAR28", "CHAR29", "CHAR30", 
		"CHAR31", "ESCAPEDQUOTE", "ESCAPEDDOUBLEQUOTE", "QUOTE", "DOUBLEQUOTE", 
		"QUOTEDSTRING", "DOUBLEQUOTEDSTRING", "WHITESPACE", "NEWLINE", "LINEFEED", 
		"INDENT", "DEDENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Rat.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RatParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RatParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RatParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CodeContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public CodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_code; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.EnterCode(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.ExitCode(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRatVisitor<TResult> typedVisitor = visitor as IRatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCode(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CodeContext code() {
		CodeContext _localctx = new CodeContext(Context, State);
		EnterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 42; statement();
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << LET) | (1L << ID))) != 0) || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementblockContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(RatParser.NEWLINE, 0); }
		public ITerminalNode INDENT() { return GetToken(RatParser.INDENT, 0); }
		public ITerminalNode DEDENT() { return GetToken(RatParser.DEDENT, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public StatementblockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statementblock; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.EnterStatementblock(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.ExitStatementblock(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRatVisitor<TResult> typedVisitor = visitor as IRatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatementblock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementblockContext statementblock() {
		StatementblockContext _localctx = new StatementblockContext(Context, State);
		EnterRule(_localctx, 2, RULE_statementblock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(NEWLINE);
			State = 48; Match(INDENT);
			State = 50;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 49; statement();
				}
				}
				State = 52;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << LET) | (1L << ID))) != 0) || _la==NEWLINE );
			State = 54; Match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ITerminalNode NEWLINE() { return GetToken(RatParser.NEWLINE, 0); }
		public FuncdefContext funcdef() {
			return GetRuleContext<FuncdefContext>(0);
		}
		public IfstmtContext ifstmt() {
			return GetRuleContext<IfstmtContext>(0);
		}
		public FunccallContext funccall() {
			return GetRuleContext<FunccallContext>(0);
		}
		public ITerminalNode SEMICOLON() { return GetToken(RatParser.SEMICOLON, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRatVisitor<TResult> typedVisitor = visitor as IRatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		int _la;
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IF:
			case LET:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 59;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case LET:
					{
					State = 56; funcdef();
					}
					break;
				case IF:
					{
					State = 57; ifstmt();
					}
					break;
				case ID:
					{
					State = 58; funccall();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 62;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==SEMICOLON) {
					{
					State = 61; Match(SEMICOLON);
					}
				}

				State = 64; Match(NEWLINE);
				}
				}
				break;
			case NEWLINE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 66; Match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionsContext : ParserRuleContext {
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode[] EXPRSEPARATOR() { return GetTokens(RatParser.EXPRSEPARATOR); }
		public ITerminalNode EXPRSEPARATOR(int i) {
			return GetToken(RatParser.EXPRSEPARATOR, i);
		}
		public ExpressionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expressions; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.EnterExpressions(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.ExitExpressions(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRatVisitor<TResult> typedVisitor = visitor as IRatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpressions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionsContext expressions() {
		ExpressionsContext _localctx = new ExpressionsContext(Context, State);
		EnterRule(_localctx, 6, RULE_expressions);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; expression(0);
			State = 74;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 70; Match(EXPRSEPARATOR);
					State = 71; expression(0);
					}
					} 
				}
				State = 76;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public FunccallContext funccall() {
			return GetRuleContext<FunccallContext>(0);
		}
		public IfexprContext ifexpr() {
			return GetRuleContext<IfexprContext>(0);
		}
		public LeftoperatorContext leftoperator() {
			return GetRuleContext<LeftoperatorContext>(0);
		}
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		public NumberContext number() {
			return GetRuleContext<NumberContext>(0);
		}
		public ITerminalNode ID() { return GetToken(RatParser.ID, 0); }
		public ITerminalNode COMPAREOPERATOR() { return GetToken(RatParser.COMPAREOPERATOR, 0); }
		public ZerooperatorContext zerooperator() {
			return GetRuleContext<ZerooperatorContext>(0);
		}
		public FirstoperatorContext firstoperator() {
			return GetRuleContext<FirstoperatorContext>(0);
		}
		public SecondoperatorContext secondoperator() {
			return GetRuleContext<SecondoperatorContext>(0);
		}
		public ThirdoperatorContext thirdoperator() {
			return GetRuleContext<ThirdoperatorContext>(0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRatListener typedListener = listener as IRatListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRatVisitor<TResult> typedVisitor = visitor as IRatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_expression, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 78; funccall();
				}
				break;
			case 2:
				{
				State = 79; ifexpr();
				}
				break;
			case 3:
				{
				State = 80; leftoperator();
				State = 81; expression(10);
				}
				break;
			case 4:
				{
				State = 83; @string();
				}
				break;
			case 5:
				{
				State = 84; @bool();
				}
				break;
			case 6:
				{
				State = 85; range();
				}
				break;
			case 7:
				{
				State = 86; number();
				}
				break;
			case 8:
				{
				State = 87; Match(ID);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 111;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 109;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 90;
						if (!(Precpred(Context, 11))) throw new FailedPredicateException(this, "Precpred(Context, 11)");
						State = 91; Match(COMPAREOPERATOR);
						State = 92; expression(12);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 93;
						if (!(Precpred(Context, 9))) throw new FailedPredicateException(this, "Precpred(Context, 9)");
						State = 94; zerooperator();
						State = 95; expression(10);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 97;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 98; firstoperator();
						State = 99; expression(9);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 101;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 102; secondoperator();
						State = 103; expression(8);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 105;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 106; thirdoperator();
						State = 107; expression(7);
						}
						break;
					}
					} 
				}
				State = 113;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
